--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,20 +1,20 @@
-<!-- <div [ngSwitch]="role">
-    <div *ngSwitchCase="'User'">
-        <h1 [ngStyle]="{color: 'red'}">hello11</h1>
+<nz-layout class="app-layout">
+  <nz-header>
+    <div class="logo">
+      <a>
+        <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
+        <h1>NG-ZORRO</h1>
+      </a>
     </div>
-    <div *ngSwitchCase="'Admin'">
-        <a routerLink="/">Home</a>
-        |
-        <a routerLink="/room">Room</a>
-        <router-outlet />
-
-        <p>Car listing: {{display}}</p>
-        <app-rooms [roomsList]="roomData"></app-rooms>
-
+    <ul nz-menu class="top-nav" nzTheme="dark" nzMode="horizontal">
+      <li nz-menu-item routerLinkActive="ant-menu-item-selected" routerLink="/welcome">Home</li>
+      <li nz-menu-item>Account</li>
+      <li nz-menu-item>Profile</li>
+    </ul>
+  </nz-header>
+  <nz-content>
+    <div class="inner-content">
+      <router-outlet></router-outlet>
     </div>
-    <div *ngSwitchDefault>
-        <h1>leuleu</h1>
-    </div>
-</div> -->
-
-<app-todo></app-todo>
+  </nz-content>
+</nz-layout>
