--- a/src/app/features/auth/login/login.less
+++ b/src/app/features/auth/login/login.less
@@ -46,7 +46,7 @@ form {
   button {
     width: 100%;
     padding: 10px;
-    background: #28a745;
+    // background: #28a745;
     color: #fff;
     border: none;
     border-radius: 6px;
