--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,20 +1,28 @@
 <nz-layout class="app-layout">
-  <nz-header>
-    <div class="logo">
-      <a>
-        <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
-        <h1>NG-ZORRO</h1>
-      </a>
-    </div>
-    <ul nz-menu class="top-nav" nzTheme="dark" nzMode="horizontal">
-      <li nz-menu-item routerLinkActive="ant-menu-item-selected" routerLink="/welcome">Home</li>
-      <li nz-menu-item>Account</li>
-      <li nz-menu-item>Profile</li>
-    </ul>
-  </nz-header>
-  <nz-content>
-    <div class="inner-content">
-      <router-outlet></router-outlet>
-    </div>
-  </nz-content>
+	<nz-header>
+		<div class="logo">MyApp</div>
+		<ul nz-menu nzTheme="dark" nzMode="horizontal" class="menu">
+			<li nz-menu-item *ngIf="!auth.isLoggedIn()" routerLink="/login">
+				Login
+			</li>
+
+			<li *ngIf="auth.isLoggedIn()" nz-submenu [nzTitle]="userTpl">
+				<ng-template #userTpl>
+					<span>
+						<i nz-icon nzType="user"></i> Account
+					</span>
+				</ng-template>
+				<ul>
+					<li nz-menu-item (click)="logout()">
+						<i nz-icon nzType="logout"></i> Logout
+					</li>
+				</ul>
+			</li>
+		</ul>
+	</nz-header>
+	<nz-content>
+		<div class="inner-content">
+			<router-outlet></router-outlet>
+		</div>
+	</nz-content>
 </nz-layout>
