--- a/src/app/features/auth/login/login.less
+++ b/src/app/features/auth/login/login.less
@@ -5,7 +5,7 @@ form {
   border: 1px solid #ddd;
   border-radius: 8px;
   background: #fff;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 
   h2 {
     text-align: center;
@@ -46,7 +46,7 @@ form {
   button {
     width: 100%;
     padding: 10px;
-    // background: #28a745;
+    background: #28a745;
     color: #fff;
     border: none;
     border-radius: 6px;
@@ -73,7 +73,7 @@ form {
 }
 
 .error {
-	color: red; 
-	margin-top: 10px;
-	text-align: center
+  color: red;
+  margin-top: 10px;
+  text-align: center
 }
